Minor changes to img max-widths to fix 10.6 OSX scrollbar issue

--- a/assets/SASS/_style.scss
+++ b/assets/SASS/_style.scss
@@ -152,7 +152,7 @@
 		 float: left;
 		 height: auto;
 		 overflow: auto;
-		 padding: 1px 5px;
+		 padding: 1px 0.5%;
 		 @include border-box; 
 	 }
 	 
