--- a/assets/SASS/imports/_base-elements.scss
+++ b/assets/SASS/imports/_base-elements.scss
@@ -73,7 +73,7 @@
 	
 	img, object, embed {
 		height: auto;
-		max-width: 100%;
+		max-width: 99%;
 	}	
 	
 	blockquote {
